feat: Id auto generated
Implemented as part of 7723f217-326d-43ff-8003-c27367c6d534
